--- a/SoftMasters/appsettings.json
+++ b/SoftMasters/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "dmise.dev": "server=92.53.120.213;user=root;database=SoftMasters;password=Develop3r0;port=3306"
+    "dmise.dev": "server=92.53.120.213;user=root;database=SoftMasters_test;password=Develop3r0;port=3306"
   },
 
 
